# quipu

./: .dockerignore  .env.example  .gitignore  .mcp.json  CLAUDE.md  README.md  justfile  pyproject.toml  roadmap.md
.claude/: CLAUDE.md  README.md
agent_api/: Dockerfile  fly.toml  pyproject.toml  server.py
brain/: Dockerfile  chat_graph.py  dependencies.py  extraction_graph.py  extraction_schemas.py  fly.toml  graph.py  logging.py  mcp_registry.py  models.py  pyproject.toml  rate_limit.py  schemas.py  server.py  webhooks.py
brain/agents/: __init__.py  registry.py
brain/agents/definitions/: analyst.yaml
brain/tests/: test_agent_registry.py  test_byok.py  test_chat_agent.py  test_conversation_persistence.py  test_cors.py  test_dependencies.py  test_extraction.py  test_graph.py  test_loop_limits.py  test_mcp_reconnection.py  test_onprem_hands.py  test_rate_limit.py  test_results_api.py  test_sse_integration.py  test_user_isolation.py  test_validation.py  test_webhooks.py  test_workflows.py
brain/workflows/: engine.py  schema.py
docs/: architecture.md  (+3 more)
hands/: Dockerfile  auth.py  fly.toml  logging.py  pyproject.toml  server.py
hands/tests/: test_conversation_tools.py  test_db_tools.py  test_file_tools.py  test_key_tools.py  test_notification_tools.py  test_run_tools.py  test_web_tools.py
hands/tools/: conversation_tools.py  db_tools.py  file_tools.py  key_tools.py  notification_tools.py  run_tools.py  user_server_tools.py  web_tools.py  webhook_tools.py
mcp_server/: Dockerfile  fly.toml  pyproject.toml  server.py
mcp_server/tools/: db_tools.py
(+26 files in other folders)
