[project]
name = "hands"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.3",
    "asyncpg>=0.30",
    "beautifulsoup4>=4.12",
    "playwright>=1.50",
    "httpx>=0.28",
]

[tool.hatch.build.targets.wheel]
packages = ["hands"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
